--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-data-table-component": "^7.7.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
