--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "19.1.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
